
######################
#                    #
#      2022.06       #
#                    #
######################
New features and other changes:
1. Added function Get-HWPerformanceScore.
2. Added function Test-NetworkSpeed and config file items NSLocal, NSRemote, NSFileSize.

######################
#                    #
#      2022.04       #
#                    #
######################
New features and other changes:
1. Added function Uninstall-DamewareMiniRemoteControl.
2. Removed Transverse from InstallRemote.ps1.
3. Removed function Copy-Transverse and the Transverse config item.
4. Updated the WMI query used to find the Transverse program in Uninstall-TransVerse.

######################
#                    #
#      2022.03       #
#                    #
######################
New features and other changes:
1. Fixed an issue that caused Get-RecentUser to not work.
2. Added Open-HomeAssistant function and HomeAssistant config item.
3. Added Open-LexmarkManagementConsole and Open-PrintRelease functions.
4. Added LMC and PrintRelease config items.
5. Changed Get-RecentUser so it ignores additional UMFD-x accounts.
6. Added Zoom config item and functions Copy-Zoom, Install-Zoom, and Uninstall-Zoom. Also added Zoom install to InstallRemote.ps1.
7. Changed Uninstall functions so they don't require an object and now default to the local computer.

######################
#                    #
#      2022.02       #
#                    #
######################
New features and other changes:
1. Removed print driver copy and installation functions.
2. In Set-RemediationValues added switches to SMB 1 and 2 commands to disable user prompts.
3. Made Install-WSTools multithreaded.
4. Added Splunk to AppNames config value.

######################
#                    #
#      2021.12       #
#                    #
######################
New features and other changes:
1. Added Windows Server 2022 21H2 support to Get-OperatingSystem and Get-HWInfo.