@@ -358,6 +358,7 @@ $Global:WSToolsConfig = [PSCustomObject]@{
         (New-Object -TypeName PSObject -Property @{Year = 2021; Date = (Get-Date -Date '2021-01-18'); DayOfWeek = ((Get-Date -Date '2021-01-18').DayOfWeek); Name = "Martin Luther King Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2021; Date = (Get-Date -Date '2021-02-15'); DayOfWeek = ((Get-Date -Date '2021-02-15').DayOfWeek); Name = "Washingtons Birthday"}),
         (New-Object -TypeName PSObject -Property @{Year = 2021; Date = (Get-Date -Date '2021-05-31'); DayOfWeek = ((Get-Date -Date '2021-05-31').DayOfWeek); Name = "Memorial Day"}),
+        (New-Object -TypeName PSObject -Property @{Year = 2022; Date = (Get-Date -Date '2021-06-18'); DayOfWeek = ((Get-Date -Date '2021-06-18').DayOfWeek); Name = "Juneteenth National Independence Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2021; Date = (Get-Date -Date '2021-07-05'); DayOfWeek = ((Get-Date -Date '2021-07-05').DayOfWeek); Name = "Independence Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2021; Date = (Get-Date -Date '2021-09-06'); DayOfWeek = ((Get-Date -Date '2021-09-06').DayOfWeek); Name = "Labor Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2021; Date = (Get-Date -Date '2021-10-11'); DayOfWeek = ((Get-Date -Date '2021-10-11').DayOfWeek); Name = "Columbus Day"}),
@@ -369,6 +370,7 @@ $Global:WSToolsConfig = [PSCustomObject]@{
         (New-Object -TypeName PSObject -Property @{Year = 2022; Date = (Get-Date -Date '2022-01-17'); DayOfWeek = ((Get-Date -Date '2022-01-17').DayOfWeek); Name = "Martin Luther King Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2022; Date = (Get-Date -Date '2022-02-21'); DayOfWeek = ((Get-Date -Date '2022-02-21').DayOfWeek); Name = "Washingtons Birthday"}),
         (New-Object -TypeName PSObject -Property @{Year = 2022; Date = (Get-Date -Date '2022-05-30'); DayOfWeek = ((Get-Date -Date '2022-05-30').DayOfWeek); Name = "Memorial Day"}),
+        (New-Object -TypeName PSObject -Property @{Year = 2022; Date = (Get-Date -Date '2022-06-20'); DayOfWeek = ((Get-Date -Date '2022-06-20').DayOfWeek); Name = "Juneteenth National Independence Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2022; Date = (Get-Date -Date '2022-07-04'); DayOfWeek = ((Get-Date -Date '2022-07-04').DayOfWeek); Name = "Independence Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2022; Date = (Get-Date -Date '2022-09-05'); DayOfWeek = ((Get-Date -Date '2022-09-05').DayOfWeek); Name = "Labor Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2022; Date = (Get-Date -Date '2022-10-10'); DayOfWeek = ((Get-Date -Date '2022-10-10').DayOfWeek); Name = "Columbus Day"}),
@@ -380,6 +382,7 @@ $Global:WSToolsConfig = [PSCustomObject]@{
         (New-Object -TypeName PSObject -Property @{Year = 2023; Date = (Get-Date -Date '2023-01-16'); DayOfWeek = ((Get-Date -Date '2023-01-16').DayOfWeek); Name = "Martin Luther King Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2023; Date = (Get-Date -Date '2023-02-20'); DayOfWeek = ((Get-Date -Date '2023-02-20').DayOfWeek); Name = "Washingtons Birthday"}),
         (New-Object -TypeName PSObject -Property @{Year = 2023; Date = (Get-Date -Date '2023-05-29'); DayOfWeek = ((Get-Date -Date '2023-05-29').DayOfWeek); Name = "Memorial Day"}),
+        (New-Object -TypeName PSObject -Property @{Year = 2022; Date = (Get-Date -Date '2023-06-19'); DayOfWeek = ((Get-Date -Date '2023-06-19').DayOfWeek); Name = "Juneteenth National Independence Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2023; Date = (Get-Date -Date '2023-07-04'); DayOfWeek = ((Get-Date -Date '2023-07-04').DayOfWeek); Name = "Independence Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2023; Date = (Get-Date -Date '2023-09-04'); DayOfWeek = ((Get-Date -Date '2023-09-04').DayOfWeek); Name = "Labor Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2023; Date = (Get-Date -Date '2023-10-09'); DayOfWeek = ((Get-Date -Date '2023-10-09').DayOfWeek); Name = "Columbus Day"}),
@@ -391,6 +394,7 @@ $Global:WSToolsConfig = [PSCustomObject]@{
         (New-Object -TypeName PSObject -Property @{Year = 2024; Date = (Get-Date -Date '2024-01-15'); DayOfWeek = ((Get-Date -Date '2024-01-15').DayOfWeek); Name = "Martin Luther King Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2024; Date = (Get-Date -Date '2024-02-19'); DayOfWeek = ((Get-Date -Date '2024-02-19').DayOfWeek); Name = "Washingtons Birthday"}),
         (New-Object -TypeName PSObject -Property @{Year = 2024; Date = (Get-Date -Date '2024-05-27'); DayOfWeek = ((Get-Date -Date '2024-05-27').DayOfWeek); Name = "Memorial Day"}),
+        (New-Object -TypeName PSObject -Property @{Year = 2022; Date = (Get-Date -Date '2024-06-19'); DayOfWeek = ((Get-Date -Date '2024-06-19').DayOfWeek); Name = "Juneteenth National Independence Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2024; Date = (Get-Date -Date '2024-07-04'); DayOfWeek = ((Get-Date -Date '2024-07-04').DayOfWeek); Name = "Independence Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2024; Date = (Get-Date -Date '2024-09-02'); DayOfWeek = ((Get-Date -Date '2024-09-02').DayOfWeek); Name = "Labor Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2024; Date = (Get-Date -Date '2024-10-14'); DayOfWeek = ((Get-Date -Date '2024-10-14').DayOfWeek); Name = "Columbus Day"}),
@@ -402,6 +406,7 @@ $Global:WSToolsConfig = [PSCustomObject]@{
         (New-Object -TypeName PSObject -Property @{Year = 2025; Date = (Get-Date -Date '2025-01-20'); DayOfWeek = ((Get-Date -Date '2025-01-20').DayOfWeek); Name = "Martin Luther King Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2025; Date = (Get-Date -Date '2025-02-17'); DayOfWeek = ((Get-Date -Date '2025-02-17').DayOfWeek); Name = "Washingtons Birthday"}),
         (New-Object -TypeName PSObject -Property @{Year = 2025; Date = (Get-Date -Date '2025-05-26'); DayOfWeek = ((Get-Date -Date '2025-05-26').DayOfWeek); Name = "Memorial Day"}),
+        (New-Object -TypeName PSObject -Property @{Year = 2022; Date = (Get-Date -Date '2025-06-19'); DayOfWeek = ((Get-Date -Date '2025-06-19').DayOfWeek); Name = "Juneteenth National Independence Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2025; Date = (Get-Date -Date '2025-07-04'); DayOfWeek = ((Get-Date -Date '2025-07-04').DayOfWeek); Name = "Independence Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2025; Date = (Get-Date -Date '2025-09-01'); DayOfWeek = ((Get-Date -Date '2025-09-01').DayOfWeek); Name = "Labor Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2025; Date = (Get-Date -Date '2025-10-13'); DayOfWeek = ((Get-Date -Date '2025-10-13').DayOfWeek); Name = "Columbus Day"}),
@@ -413,6 +418,7 @@ $Global:WSToolsConfig = [PSCustomObject]@{
         (New-Object -TypeName PSObject -Property @{Year = 2026; Date = (Get-Date -Date '2026-01-19'); DayOfWeek = ((Get-Date -Date '2026-01-19').DayOfWeek); Name = "Martin Luther King Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2026; Date = (Get-Date -Date '2026-02-16'); DayOfWeek = ((Get-Date -Date '2026-02-16').DayOfWeek); Name = "Washingtons Birthday"}),
         (New-Object -TypeName PSObject -Property @{Year = 2026; Date = (Get-Date -Date '2026-05-25'); DayOfWeek = ((Get-Date -Date '2026-05-25').DayOfWeek); Name = "Memorial Day"}),
+        (New-Object -TypeName PSObject -Property @{Year = 2022; Date = (Get-Date -Date '2026-06-19'); DayOfWeek = ((Get-Date -Date '2026-06-19').DayOfWeek); Name = "Juneteenth National Independence Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2026; Date = (Get-Date -Date '2026-07-03'); DayOfWeek = ((Get-Date -Date '2026-07-03').DayOfWeek); Name = "Independence Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2026; Date = (Get-Date -Date '2026-09-07'); DayOfWeek = ((Get-Date -Date '2026-09-07').DayOfWeek); Name = "Labor Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2026; Date = (Get-Date -Date '2026-10-12'); DayOfWeek = ((Get-Date -Date '2026-10-12').DayOfWeek); Name = "Columbus Day"}),
@@ -424,6 +430,7 @@ $Global:WSToolsConfig = [PSCustomObject]@{
         (New-Object -TypeName PSObject -Property @{Year = 2027; Date = (Get-Date -Date '2027-01-18'); DayOfWeek = ((Get-Date -Date '2027-01-18').DayOfWeek); Name = "Martin Luther King Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2027; Date = (Get-Date -Date '2027-02-15'); DayOfWeek = ((Get-Date -Date '2027-02-15').DayOfWeek); Name = "Washingtons Birthday"}),
         (New-Object -TypeName PSObject -Property @{Year = 2027; Date = (Get-Date -Date '2027-05-31'); DayOfWeek = ((Get-Date -Date '2027-05-31').DayOfWeek); Name = "Memorial Day"}),
+        (New-Object -TypeName PSObject -Property @{Year = 2022; Date = (Get-Date -Date '2027-06-18'); DayOfWeek = ((Get-Date -Date '2027-06-18').DayOfWeek); Name = "Juneteenth National Independence Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2027; Date = (Get-Date -Date '2027-07-05'); DayOfWeek = ((Get-Date -Date '2027-07-05').DayOfWeek); Name = "Independence Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2027; Date = (Get-Date -Date '2027-09-06'); DayOfWeek = ((Get-Date -Date '2027-09-06').DayOfWeek); Name = "Labor Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2027; Date = (Get-Date -Date '2027-10-11'); DayOfWeek = ((Get-Date -Date '2027-10-11').DayOfWeek); Name = "Columbus Day"}),
@@ -435,6 +442,7 @@ $Global:WSToolsConfig = [PSCustomObject]@{
         (New-Object -TypeName PSObject -Property @{Year = 2028; Date = (Get-Date -Date '2028-01-17'); DayOfWeek = ((Get-Date -Date '2028-01-17').DayOfWeek); Name = "Martin Luther King Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2028; Date = (Get-Date -Date '2028-02-21'); DayOfWeek = ((Get-Date -Date '2028-02-21').DayOfWeek); Name = "Washingtons Birthday"}),
         (New-Object -TypeName PSObject -Property @{Year = 2028; Date = (Get-Date -Date '2028-05-29'); DayOfWeek = ((Get-Date -Date '2028-05-29').DayOfWeek); Name = "Memorial Day"}),
+        (New-Object -TypeName PSObject -Property @{Year = 2022; Date = (Get-Date -Date '2028-06-19'); DayOfWeek = ((Get-Date -Date '2028-06-19').DayOfWeek); Name = "Juneteenth National Independence Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2028; Date = (Get-Date -Date '2028-07-04'); DayOfWeek = ((Get-Date -Date '2028-07-04').DayOfWeek); Name = "Independence Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2028; Date = (Get-Date -Date '2028-09-04'); DayOfWeek = ((Get-Date -Date '2028-09-04').DayOfWeek); Name = "Labor Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2028; Date = (Get-Date -Date '2028-10-09'); DayOfWeek = ((Get-Date -Date '2028-10-09').DayOfWeek); Name = "Columbus Day"}),
@@ -446,6 +454,7 @@ $Global:WSToolsConfig = [PSCustomObject]@{
         (New-Object -TypeName PSObject -Property @{Year = 2029; Date = (Get-Date -Date '2029-01-15'); DayOfWeek = ((Get-Date -Date '2029-01-15').DayOfWeek); Name = "Martin Luther King Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2029; Date = (Get-Date -Date '2029-02-19'); DayOfWeek = ((Get-Date -Date '2029-02-19').DayOfWeek); Name = "Washingtons Birthday"}),
         (New-Object -TypeName PSObject -Property @{Year = 2029; Date = (Get-Date -Date '2029-05-28'); DayOfWeek = ((Get-Date -Date '2029-05-28').DayOfWeek); Name = "Memorial Day"}),
+        (New-Object -TypeName PSObject -Property @{Year = 2022; Date = (Get-Date -Date '2029-06-19'); DayOfWeek = ((Get-Date -Date '2029-06-19').DayOfWeek); Name = "Juneteenth National Independence Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2029; Date = (Get-Date -Date '2029-07-04'); DayOfWeek = ((Get-Date -Date '2029-07-04').DayOfWeek); Name = "Independence Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2029; Date = (Get-Date -Date '2029-09-03'); DayOfWeek = ((Get-Date -Date '2029-09-03').DayOfWeek); Name = "Labor Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2029; Date = (Get-Date -Date '2029-10-08'); DayOfWeek = ((Get-Date -Date '2029-10-08').DayOfWeek); Name = "Columbus Day"}),
@@ -457,6 +466,7 @@ $Global:WSToolsConfig = [PSCustomObject]@{
         (New-Object -TypeName PSObject -Property @{Year = 2030; Date = (Get-Date -Date '2030-01-21'); DayOfWeek = ((Get-Date -Date '2030-01-21').DayOfWeek); Name = "Martin Luther King Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2030; Date = (Get-Date -Date '2030-02-18'); DayOfWeek = ((Get-Date -Date '2030-02-18').DayOfWeek); Name = "Washingtons Birthday"}),
         (New-Object -TypeName PSObject -Property @{Year = 2030; Date = (Get-Date -Date '2030-05-27'); DayOfWeek = ((Get-Date -Date '2030-05-27').DayOfWeek); Name = "Memorial Day"}),
+        (New-Object -TypeName PSObject -Property @{Year = 2022; Date = (Get-Date -Date '2030-06-19'); DayOfWeek = ((Get-Date -Date '2030-06-19').DayOfWeek); Name = "Juneteenth National Independence Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2030; Date = (Get-Date -Date '2030-07-04'); DayOfWeek = ((Get-Date -Date '2030-07-04').DayOfWeek); Name = "Independence Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2030; Date = (Get-Date -Date '2030-09-02'); DayOfWeek = ((Get-Date -Date '2030-09-02').DayOfWeek); Name = "Labor Day"}),
         (New-Object -TypeName PSObject -Property @{Year = 2030; Date = (Get-Date -Date '2030-10-14'); DayOfWeek = ((Get-Date -Date '2030-10-14').DayOfWeek); Name = "Columbus Day"}),
